Fix audio player content overflow with sidebar Always display .gif as video Restrict jumping from webpage media to regular Fix displaying round video in webpage

--- a/src/scss/partials/_chatPinned.scss
+++ b/src/scss/partials/_chatPinned.scss
@@ -285,6 +285,12 @@
 
     .pinned-container-content {
       margin-right: .5rem;
+
+      @include respond-to(medium-screens) {
+				body.is-right-column-shown & {
+          padding-right: var(--right-column-width);
+        }
+      }
     }
 
     /* &:before {
